Created Contact Page.

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarMenu">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -42,6 +42,13 @@
     <!-- Grid for Main Content-->
     <div class="container main-container">
         <div class="container">
+
+            <div class="col-12">
+                <h1>About</h1>
+            </div>
+
+            <hr>
+
             <!-- Columns stack on mobile by making one full-width and the other half-width -->
             <div class="row">
                 <div class="col-6 col-md-4">
