Created Portfolio page. Made a few adjustments for About and Contact pages.

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container nav-container">
-            <a class="navbar-brand" href="#"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,15 +44,18 @@
 
         <div class="container">
 
-            <div class="col-12 contact">
-                <h1>Contact</h1>
+            <div class="row">
+
+                <div class="col-12 contact">
+                    <h1>Contact</h1>
+                </div>
+
             </div>
 
             <hr>
 
-            <div class="row">
-
-                <form>
+            <form>
+                <div class="row">
 
                     <div class="col-12">
                         <div class="form-group">
@@ -60,6 +63,10 @@
                             <input type="name" class="form-control" id="nameInput" placeholder="Enter your name here!">
                         </div>
                     </div>
+
+                </div>
+
+                <div class="row">
 
                     <div class="col-12">
                         <div class="form-group">
@@ -69,6 +76,10 @@
 
                     </div>
 
+                </div>
+
+                <div class="row">
+
                     <div class="col-12">
                         <div class="form-group">
                             <label for="messageInput">Message</label>
@@ -76,17 +87,19 @@
                         </div>
                     </div>
 
-                </form>
-
-                <div class="col-12">
-                    <div class="submitButton">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
                 </div>
 
+            </form>
+
+            <div class="col-12">
+                <div class="submitButton">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
             </div>
 
         </div>
+
+    </div>
 
     </div>
 
