--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container nav-container">
-            <a class="navbar-brand" href="#"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
