Made About and Contact pages responsive to media queries.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kyra | About</title>
+    <!--Awesome Favicon Links!! :)-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Meta tag for media queries-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -41,7 +49,7 @@
 
     <!-- Grid for Main Content-->
     <div class="container main-container">
-        <div class="container">
+        <div class="gridContainer">
 
             <div class="col-12">
                 <h1>About</h1>
@@ -49,12 +57,12 @@
 
             <hr>
 
-            <!-- Columns stack on mobile by making one full-width and the other half-width -->
+            <!-- Columns stack on mobile -->
             <div class="row">
-                <div class="col-6 col-md-4">
+                <div class="col-sm-12 col-md-4">
                     <img class=profilePic src="assets/images/resizedPicKSD.jpg" alt="Profile Pic">
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-sm-12 col-md-8 textBackground">
 
                     <p class="p1">
                         Hello, my name is Kyra Davis. I am a native to Nashville, and I am on the journey to
