--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kyra | About</title>
+    <title>Kyra | Portfolio</title>
+    <!--Awesome Favicon Links!! :)-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Meta tag for media queries-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -55,7 +63,7 @@
             <hr>
 
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/collage.jpg" alt="Web Apps">
@@ -66,7 +74,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/colors.jpg" alt="Games">
@@ -77,14 +85,9 @@
                         </a>
 
                     </div>
-                </div>
-                <!-- Empty section -->
-                <div class="col-4">
-                </div>
-            </div>
 
             <div class="row">
-                <div class="col-4">
+                <div class="col-12 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/colors.jpg" alt="Artwork">
@@ -96,7 +99,7 @@
 
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/droplets.jpg" alt="Resume">
@@ -108,12 +111,12 @@
                     </div>
                 </div>
                 <!-- Empty section -->
-                <div class="col-4">
+                <div class="col-12 picCol">
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-4">
+                <div class="col-12 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/collage.jpg" alt="Current Projects">
@@ -123,12 +126,9 @@
                             </div>
                         </a>
                     </div>
-
                 </div>
             </div>
         </div>
-
-    </div>
 
     </div>
 
