--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kyra | About</title>
+    <title>Kyra | Contact</title>
+    <!--Awesome Favicon Links!! :)-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Meta tag for media queries-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -57,7 +65,7 @@
             <form>
                 <div class="row">
 
-                    <div class="col-12">
+                    <div class="col-12 formCol">
                         <div class="form-group">
                             <label for="nameInput">Name</label>
                             <input type="name" class="form-control" id="nameInput" placeholder="Enter your name here!">
@@ -68,7 +76,7 @@
 
                 <div class="row">
 
-                    <div class="col-12">
+                    <div class="col-12 formCol">
                         <div class="form-group">
                             <label for="emailInput">Email</label>
                             <input type="email" class="form-control" id="emailInput" placeholder="hello@email.com">
@@ -80,7 +88,7 @@
 
                 <div class="row">
 
-                    <div class="col-12">
+                    <div class="col-12 formCol">
                         <div class="form-group">
                             <label for="messageInput">Message</label>
                             <textarea class="form-control" id="messageInput" rows="3"></textarea>
@@ -88,7 +96,6 @@
                     </div>
 
                 </div>
-
             </form>
 
             <div class="col-12">
@@ -99,12 +106,6 @@
 
         </div>
 
-    </div>
-
-    </div>
-
-
-    </div>
     </div>
 
     <!-- Footer -->
