--- a/portfolio.html
+++ b/portfolio.html
@@ -24,37 +24,39 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <div class="container nav-container">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarMenu">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+    <div class="masthead">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <div class="container nav-container">
+                <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarMenu">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
 
-    </nav>
+        </nav>
+    </div>
 
     <!-- Grid for Main Content-->
     <div class="container main-container">
 
-        <div class="container">
+        <!-- <div class="container">
 
             <div class="row">
 
-                <div class="col-12 contact">
+                <div class="col-sm-12 contact">
                     <h1>Portfolio</h1>
                 </div>
 
@@ -63,7 +65,7 @@
             <hr>
 
             <div class="row">
-                <div class="col-4 picCol">
+                <div class="col-sm-12 col-md-4 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/collage.jpg" alt="Web Apps">
@@ -74,7 +76,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 picCol">
+                <div class="col-sm-12 col-md-4 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/colors.jpg" alt="Games">
@@ -85,9 +87,15 @@
                         </a>
 
                     </div>
+                </div> -->
 
-            <div class="row">
-                <div class="col-12 picCol">
+        <!-- Empty section -->
+        <!-- <div class="col-sm-12 col-md-4 emptyCol">
+                </div> -->
+        <!-- </div> -->
+
+        <!-- <div class="row">
+                <div class="col-sm-12 col-md-4 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/colors.jpg" alt="Artwork">
@@ -99,7 +107,7 @@
 
                     </div>
                 </div>
-                <div class="col-12 picCol">
+                <div class="col-sm-12 col-md-4 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/droplets.jpg" alt="Resume">
@@ -109,14 +117,14 @@
                             </div>
                         </a>
                     </div>
-                </div>
-                <!-- Empty section -->
-                <div class="col-12 picCol">
-                </div>
-            </div>
+                </div> -->
+        <!-- Empty section -->
+        <!-- <div class="col-sm-12 col-md-4 emptyCol">
+                </div> -->
+        <!-- </div> -->
 
-            <div class="row">
-                <div class="col-12 picCol">
+        <!-- <div class="row">
+                <div class="col-sm-12 col-md-4 picCol">
                     <div class="picbox">
                         <a href="#">
                             <img class="boxImage" src="assets/images/collage.jpg" alt="Current Projects">
@@ -128,24 +136,85 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-    </div>
-
-    <!-- Footer -->
-    <footer class="text-muted">
         <div class="container">
-            <p class="copyright">Copyright &copy;</p>
-        </div>
-    </footer>
 
-    <!-- JavaScript scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+            <div class="row">
+
+                <div class=" col-sm-6">
+                    <div class="card" style="">
+                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title 1</h5>
+                            <p class="card-text">This is a project...</p>
+                            <a href="#" class="btn btn-primary">Click!</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class=" col-sm-6">
+                    <div class="card" style="">
+                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2</h5>
+                            <p class="card-text">This is a project...</p>
+                            <a href="#" class="btn btn-primary">Click!</a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="container">
+
+            <div class="row">
+
+
+                <div class=" col-sm-6">
+                    <div class="card" style="">
+                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title 1</h5>
+                            <p class="card-text">This is a project...</p>
+                            <a href="#" class="btn btn-primary">Click!</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class=" col-sm-6">
+                    <div class="card" style="">
+                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2</h5>
+                            <p class="card-text">This is a project...</p>
+                            <a href="#" class="btn btn-primary">Click!</a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- Footer -->
+            <footer class="text-muted">
+                <div class="container">
+                    <p class="copyright">Copyright &copy;</p>
+                </div>
+            </footer>
+
+            <!-- JavaScript scripts -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
