--- a/portfolio.html
+++ b/portfolio.html
@@ -57,24 +57,24 @@
             <div class="row">
 
                 <div class=" col-sm-6">
-                    <div class="card" style="">
-                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                    <div class="card" >
+                        <img src="assets/images/crystalGameImage.jpg" class="card-img-top" alt="Crystals Collector Game">
                         <div class="card-body">
-                            <h5 class="card-title">Card title 1</h5>
-                            <p class="card-text">This is a project...</p>
-                            <a href="#" class="btn btn-primary">Click!</a>
+                            <h5 class="card-title">Crystals Collector Game</h5>
+                            <p class="card-text">Click on the crystals to match the magic number.</p>
+                            <a href="https://kd101jp14.github.io/unit-4-game/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
 
                 </div>
 
                 <div class=" col-sm-6">
-                    <div class="card" style="">
-                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                    <div class="card" >
+                        <img src="assets/images/psychicGameImage.png" class="card-img-top" alt="Psychic Game">
                         <div class="card-body">
-                            <h5 class="card-title">Project 2</h5>
-                            <p class="card-text">This is a project...</p>
-                            <a href="#" class="btn btn-primary">Click!</a>
+                            <h5 class="card-title">Psychic Game</h5>
+                            <p class="card-text">Guess which letter your computer is thinking.</p>
+                            <a href="https://kd101jp14.github.io/Psychic-Game/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
 
@@ -90,7 +90,7 @@
 
 
                 <div class=" col-sm-6">
-                    <div class="card" style="">
+                    <div class="card" >
                         <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
                         <div class="card-body">
                             <h5 class="card-title">Card title 1</h5>
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class=" col-sm-6">
-                    <div class="card" style="">
+                    <div class="card" >
                         <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
                         <div class="card-body">
                             <h5 class="card-title">Project 2</h5>
