--- a/portfolio.html
+++ b/portfolio.html
@@ -91,11 +91,11 @@
 
                 <div class=" col-sm-6">
                     <div class="card" >
-                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                        <img src="assets/images/triviaScreenshot.png" class="card-img-top" alt="90s Trivia">
                         <div class="card-body">
-                            <h5 class="card-title">Card title 1</h5>
-                            <p class="card-text">This is a project...</p>
-                            <a href="#" class="btn btn-primary">Click!</a>
+                            <h5 class="card-title">90s Trivia</h5>
+                            <p class="card-text">Do you remember the 90s?</p>
+                            <a href="https://kd101jp14.github.io/triviaGame/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
 
