Added Ocean Trivia to Portfolio Page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,11 +103,11 @@
 
                 <div class=" col-sm-6">
                     <div class="card" >
-                        <img src="http://placehold.it/150x150" class="card-img-top" alt="http://placehold.it/150x150">
+                        <img src="assets/images/oceanTrivia.jpg" class="card-img-top" alt="Ocean Trivia">
                         <div class="card-body">
-                            <h5 class="card-title">Project 2</h5>
-                            <p class="card-text">This is a project...</p>
-                            <a href="#" class="btn btn-primary">Click!</a>
+                            <h5 class="card-title">Ocean Trivia</h5>
+                            <p class="card-text">Test your knowledge on oceans!</p>
+                            <a href="https://kd101jp14.github.io/triviaGame-2/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
 
