Added gifTastic project to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,6 +114,18 @@
                 </div>
 
             </div>
+            
+            <div class=" col-sm-6">
+                    <div class="card" >
+                        <img src="assets/images/gifTastic_screenshot.png" class="card-img-top" alt="Ocean Trivia">
+                        <div class="card-body">
+                            <h5 class="card-title">Giftatstic!</h5>
+                            <p class="card-text">Click on buttons to see gifs. Create new buttons to see more gifs!</p>
+                            <a href="https://kd101jp14.github.io/gifTastic/" class="btn btn-primary">Try it out!</a>
+                        </div>
+                    </div>
+
+                </div>
 
             <!-- Footer -->
             <footer class="text-muted">
