--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
             <div class="row">
 
                 <div class=" col-sm-6">
-                    <div class="card" >
+                    <div class="card">
                         <img src="assets/images/crystalGameImage.jpg" class="card-img-top" alt="Crystals Collector Game">
                         <div class="card-body">
                             <h5 class="card-title">Crystals Collector Game</h5>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class=" col-sm-6">
-                    <div class="card" >
+                    <div class="card">
                         <img src="assets/images/psychicGameImage.png" class="card-img-top" alt="Psychic Game">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
@@ -90,7 +90,7 @@
 
 
                 <div class=" col-sm-6">
-                    <div class="card" >
+                    <div class="card">
                         <img src="assets/images/triviaScreenshot.png" class="card-img-top" alt="90s Trivia">
                         <div class="card-body">
                             <h5 class="card-title">90s Trivia</h5>
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class=" col-sm-6">
-                    <div class="card" >
+                    <div class="card">
                         <img src="assets/images/OceanTriviaScreenshot.jpg" class="card-img-top" alt="Ocean Trivia">
                         <div class="card-body">
                             <h5 class="card-title">Ocean Trivia</h5>
@@ -114,18 +114,38 @@
                 </div>
 
             </div>
-            
-            <div class=" col-sm-6">
-                    <div class="card" >
-                        <img src="assets/images/gifTastic_screenshot.png" class="card-img-top" alt="Ocean Trivia">
-                        <div class="card-body">
-                            <h5 class="card-title">Giftatstic!</h5>
-                            <p class="card-text">Click on buttons to see gifs. Create new buttons to see more gifs!</p>
-                            <a href="https://kd101jp14.github.io/gifTastic/" class="btn btn-primary">Try it out!</a>
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class=" col-sm-6">
+                        <div class="card">
+                            <img src="assets/images/gifTastic_screenshot.png" class="card-img-top" alt="Ocean Trivia">
+                            <div class="card-body">
+                                <h5 class="card-title">Giftatstic!</h5>
+                                <p class="card-text">Click on buttons to see gifs. Create new buttons to see more gifs!</p>
+                                <a href="https://kd101jp14.github.io/gifTastic/" class="btn btn-primary">Try it out!</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" col-sm-6">
+                        <div class="card">
+                            <img src="assets/images/train_screenshot.png" class="card-img-top" alt="Train Scheduler">
+                            <div class="card-body">
+                                <h5 class="card-title">Train Scheduler</h5>
+                                <p class="card-text">Find out when your desired train will arrive. Add multiple trains
+                                    to the list!</p>
+                                <a href="https://kd101jp14.github.io/train_scheduler/" class="btn btn-primary">Try it
+                                    out!</a>
+                            </div>
                         </div>
                     </div>
 
                 </div>
+
+            </div>
 
             <!-- Footer -->
             <footer class="text-muted">
