Added group project/ Day Vibe to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -145,7 +145,22 @@
 
                 </div>
 
+                <div class="row">
+
+                    <div class=" col-sm-6">
+                        <div class="card">
+                            <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
+                            <div class="card-body">
+                                <h5 class="card-title">Day Vibe</h5>
+                                <p class="card-text">How was your day? You'll receive a music playlist based on the emotion of your text, not to mention a restauarant suggestion!</p>
+                                <a href="https://kd101jp14.github.io/projectone/" class="btn btn-primary">Try it out!</a>
+                            </div>
+                        </div>
+                    </div>
+
             </div>
+
+
 
             <!-- Footer -->
             <footer class="text-muted">
