--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
                             <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
                             <div class="card-body">
                                 <h5 class="card-title">Day Vibe</h5>
-                                <p class="card-text">How was your day? You'll receive a music playlist based on the emotion of your text, not to mention a restauarant suggestion!</p>
+                                <p class="card-text">How was your day? You'll receive a music playlist based on the emotion of your text, not to mention a restaurant suggestion!</p>
                                 <a href="https://kd101jp14.github.io/projectone/" class="btn btn-primary">Try it out!</a>
                             </div>
                         </div>
