Updated text-align in media query to only the container on the 'About' page.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Grid for Main Content-->
-    <div class="container main-container">
+    <div class="container main-container" id="aboutContainer">
         <div class="gridContainer">
 
             <div class="col-12">
