Updated card text on the 'Portfolio' page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                         <img src="assets/images/psychicGameImage.png" class="card-img-top" alt="Psychic Game">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
-                            <p class="card-text">Guess which letter your computer is thinking.</p>
+                            <p class="card-text">Guess which letter your computer is thinking. You have 7 chances!</p>
                             <a href="https://kd101jp14.github.io/Psychic-Game/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                         <img src="assets/images/triviaScreenshot.png" class="card-img-top" alt="90s Trivia">
                         <div class="card-body">
                             <h5 class="card-title">90s Trivia</h5>
-                            <p class="card-text">Do you remember the 90s?</p>
+                            <p class="card-text">Do you remember the 90s? You've got 90 seconds.</p>
                             <a href="https://kd101jp14.github.io/triviaGame/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                             <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
                             <div class="card-body">
                                 <h5 class="card-title">Day Vibe</h5>
-                                <p class="card-text">How was your day? You'll receive a music playlist based on the emotion of your text, not to mention a restaurant suggestion!</p>
+                                <p class="card-text">How was your day? Receive a playlist based on your mood.</p>
                                 <a href="https://kd101jp14.github.io/projectone/" class="btn btn-primary">Try it out!</a>
                             </div>
                         </div>
