Updated 'Psychic Game' card text on 'Portfolio' page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                         <img src="assets/images/psychicGameImage.png" class="card-img-top" alt="Psychic Game">
                         <div class="card-body">
                             <h5 class="card-title">Psychic Game</h5>
-                            <p class="card-text">Guess which letter your computer is thinking. You have 7 chances!</p>
+                            <p class="card-text">Guess which letter your computer is thinking.</p>
                             <a href="https://kd101jp14.github.io/Psychic-Game/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
