Rearranged 'Portfolio' page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
     <!-- Bootstrap Link -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Meta tag for media queries-->
@@ -27,7 +27,8 @@
     <div class="masthead">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container nav-container">
-                <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/images/Logo.png" class="img-fluid"
+                        alt="logo"></a>
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -58,26 +59,26 @@
 
                 <div class=" col-sm-6">
                     <div class="card">
-                        <img src="assets/images/crystalGameImage.jpg" class="card-img-top" alt="Crystals Collector Game">
+                        <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
                         <div class="card-body">
-                            <h5 class="card-title">Crystals Collector Game</h5>
-                            <p class="card-text">Click on the crystals to match the magic number.</p>
-                            <a href="https://kd101jp14.github.io/unit-4-game/" class="btn btn-primary">Play!</a>
+                            <h5 class="card-title">Day Vibe (Collaboration)</h5>
+                            <p class="card-text">How was your day? Receive a playlist based on your mood (and food,
+                                too)!</p>
+                            <a href="https://kd101jp14.github.io/projectone/" class="btn btn-primary">Try it out!</a>
                         </div>
                     </div>
-
                 </div>
 
                 <div class=" col-sm-6">
                     <div class="card">
-                        <img src="assets/images/psychicGameImage.png" class="card-img-top" alt="Psychic Game">
+                        <img src="assets/images/crystalGameImage.jpg" class="card-img-top"
+                            alt="Crystals Collector Game">
                         <div class="card-body">
-                            <h5 class="card-title">Psychic Game</h5>
-                            <p class="card-text">Guess which letter your computer is thinking.</p>
-                            <a href="https://kd101jp14.github.io/Psychic-Game/" class="btn btn-primary">Play!</a>
+                            <h5 class="card-title">Crystals Collector Game</h5>
+                            <p class="card-text">Click on the crystals with secret values to match the magic number!</p>
+                            <a href="https://kd101jp14.github.io/unit-4-game/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
-
                 </div>
 
             </div>
@@ -94,7 +95,7 @@
                         <img src="assets/images/triviaScreenshot.png" class="card-img-top" alt="90s Trivia">
                         <div class="card-body">
                             <h5 class="card-title">90s Trivia</h5>
-                            <p class="card-text">Do you remember the 90s? You've got 90 seconds.</p>
+                            <p class="card-text">Do you remember the 90s? You've got 90 seconds!</p>
                             <a href="https://kd101jp14.github.io/triviaGame/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
@@ -106,7 +107,7 @@
                         <img src="assets/images/OceanTriviaScreenshot.jpg" class="card-img-top" alt="Ocean Trivia">
                         <div class="card-body">
                             <h5 class="card-title">Ocean Trivia</h5>
-                            <p class="card-text">Test your knowledge on oceans!</p>
+                            <p class="card-text">Test your knowledge on oceans. <em>Sea</em> your score!</p>
                             <a href="https://kd101jp14.github.io/triviaGame-2/" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
@@ -124,7 +125,8 @@
                             <img src="assets/images/gifTastic_screenshot.png" class="card-img-top" alt="Ocean Trivia">
                             <div class="card-body">
                                 <h5 class="card-title">Giftatstic!</h5>
-                                <p class="card-text">Click on buttons to see gifs. Create new buttons to see more gifs!</p>
+                                <p class="card-text">Click on buttons to see gifs. Create new buttons to see more gifs!
+                                </p>
                                 <a href="https://kd101jp14.github.io/gifTastic/" class="btn btn-primary">Try it out!</a>
                             </div>
                         </div>
@@ -135,8 +137,8 @@
                             <img src="assets/images/train_screenshot.png" class="card-img-top" alt="Train Scheduler">
                             <div class="card-body">
                                 <h5 class="card-title">Train Scheduler</h5>
-                                <p class="card-text">Find out when your desired train will arrive. Add multiple trains
-                                    to the list!</p>
+                                <p class="card-text">Find out when your desired train will arrive. Add multiple trains!
+                                </p>
                                 <a href="https://kd101jp14.github.io/train_scheduler/" class="btn btn-primary">Try it
                                     out!</a>
                             </div>
@@ -149,14 +151,16 @@
 
                     <div class=" col-sm-6">
                         <div class="card">
-                            <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
+                            <img src="assets/images/psychicGameImage.png" class="card-img-top" alt="Psychic Game">
                             <div class="card-body">
-                                <h5 class="card-title">Day Vibe</h5>
-                                <p class="card-text">How was your day? Receive a playlist based on your mood.</p>
-                                <a href="https://kd101jp14.github.io/projectone/" class="btn btn-primary">Try it out!</a>
+                                <h5 class="card-title">Psychic Game</h5>
+                                <p class="card-text">Guess which letter your computer is thinking!</p>
+                                <a href="https://kd101jp14.github.io/Psychic-Game/" class="btn btn-primary">Play!</a>
                             </div>
                         </div>
                     </div>
+                </div>
+
 
             </div>
 
@@ -170,11 +174,14 @@
             </footer>
 
             <!-- JavaScript scripts -->
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
                 crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+                integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
                 crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+                integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
                 crossorigin="anonymous"></script>
 </body>
 
