LinkedIn and Git Hub image links re-positioned and open in new tab.

--- a/contact.html
+++ b/contact.html
@@ -104,10 +104,10 @@
                 <div class="submitButton contactLinks">
                     <button type="submit" class="btn btn-primary">Submit</button>
 
-                    <a href="https://github.com/kd101jp14" id="github">
+                    <a href="https://github.com/kd101jp14" target="_blank" id="github">
                         <img src="assets/images/GitHub-Mark/PNG/GitHub-Mark-32px.png" alt="Git Hub Link">
                     </a>
-                    <a href="https://www.linkedin.com/in/kyra-d-333743162/" id="linkedin">
+                    <a href="https://www.linkedin.com/in/kyra-d-333743162/" target="_blank" id="linkedin">
                         <img src="assets/images/LinkedIn [in] for Screen/2-Color/In-2C-28px-TM.png" alt="LinkedIn Link">
                     </a>
                 </div>
