--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,16 @@
 
             <div class="row">
 
+                <div class="col-12 contact">
+                    <h1>Portfolio</h1>
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="row">
+
                 <div class=" col-sm-6">
                     <div class="card">
                         <img src="assets/images/projectOneScreenshot.png" class="card-img-top" alt="Ocean Trivia">
