Resized images in portfolio cards as well as the profile picture.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- Columns stack on mobile -->
             <div class="row">
                 <div class="col-sm-12 col-md-4">
-                    <img class=profilePic src="assets/images/ResizedPicKSD.jpg" alt="Profile Pic">
+                    <img class=profilePic src="assets/images/ResizedPicKSD.png" alt="Profile Pic">
                 </div>
                 <div class="col-sm-12 col-md-8 textBackground">
 
