Updated URL for 'Crystals Collector Game'.

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Crystals Collector Game</h5>
                             <p class="card-text">Click on the crystals with secret values to match the magic number!</p>
-                            <a href="https://kd101jp14.github.io/unit-4-game/" target="blank" class="btn btn-primary">Play!</a>
+                            <a href="https://kd101jp14.github.io/crystals-collector-game/" target="blank" class="btn btn-primary">Play!</a>
                         </div>
                     </div>
                 </div>
