--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- Footer -->
     <footer class="text-muted">
         <div class="container">
-            <p class="copyright">Copyright &copy;</p>
+            <p class="copyright">615.608.8162 | davis.kyra@rocketmail.com | Copyright &copy;</p>
         </div>
     </footer>
 
