--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,8 @@
                             <h5 class="card-title">Day Vibe (Collaboration)</h5>
                             <p class="card-text">How was your day? Receive a playlist based on your mood (and food,
                                 too)!</p>
-                            <a href="https://kd101jp14.github.io/projectone/" target="blank" class="btn btn-primary">Try it out!</a>
+                            <a href="https://kd101jp14.github.io/projectone/" target="blank" class="btn btn-success">Try it out!</a>
+                            <a href="https://github.com/kd101jp14/projectone" target="blank" class="btn btn-info">View repository</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +87,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Crystals Collector Game</h5>
                             <p class="card-text">Click on the crystals with secret values to match the magic number!</p>
-                            <a href="https://kd101jp14.github.io/crystals-collector-game/" target="blank" class="btn btn-primary">Play!</a>
+                            <a href="https://kd101jp14.github.io/crystals-collector-game/" target="blank" class="btn btn-success">Play!</a>
+                            <a href="https://github.com/kd101jp14/crystals-collector-game" target="blank" class="btn btn-info">View repository</a>
                         </div>
                     </div>
                 </div>
@@ -106,7 +108,8 @@
                         <div class="card-body">
                             <h5 class="card-title">90s Trivia</h5>
                             <p class="card-text">Do you remember the 90s? You've got 90 seconds!</p>
-                            <a href="https://kd101jp14.github.io/triviaGame/" target="blank" class="btn btn-primary">Play!</a>
+                            <a href="https://kd101jp14.github.io/triviaGame/" target="blank" class="btn btn-success">Play!</a>
+                            <a href="https://github.com/kd101jp14/triviaGame" target="blank" class="btn btn-info">View repository</a>
                         </div>
                     </div>
 
@@ -118,7 +121,8 @@
                         <div class="card-body">
                             <h5 class="card-title">Ocean Trivia</h5>
                             <p class="card-text">Test your knowledge on oceans. <em>Sea</em> your score!</p>
-                            <a href="https://kd101jp14.github.io/triviaGame-2/" target="blank" class="btn btn-primary">Play!</a>
+                            <a href="https://kd101jp14.github.io/triviaGame-2/" target="blank" class="btn btn-success">Play!</a>
+                            <a href="https://github.com/kd101jp14/triviaGame-2" target="blank" class="btn btn-info">View repository</a>
                         </div>
                     </div>
 
@@ -137,7 +141,8 @@
                                 <h5 class="card-title">Giftatstic!</h5>
                                 <p class="card-text">Click on buttons to see gifs. Create new buttons to see more gifs!
                                 </p>
-                                <a href="https://kd101jp14.github.io/gifTastic/" target="blank" class="btn btn-primary">Try it out!</a>
+                                <a href="https://kd101jp14.github.io/gifTastic/" target="blank" class="btn btn-success">Try it out!</a>
+                                <a href="https://github.com/kd101jp14/gifTastic" target="blank" class="btn btn-info">View repository</a>
                             </div>
                         </div>
                     </div>
@@ -149,8 +154,8 @@
                                 <h5 class="card-title">Train Scheduler</h5>
                                 <p class="card-text">Find out when your desired train will arrive. Add multiple trains!
                                 </p>
-                                <a href="https://kd101jp14.github.io/train_scheduler/" target="blank" class="btn btn-primary">Try it
-                                    out!</a>
+                                <a href="https://kd101jp14.github.io/train_scheduler/" target="blank" class="btn btn-success">Try it out!</a>
+                                <a href="https://github.com/kd101jp14/train_scheduler" target="blank" class="btn btn-info">View repository</a>
                             </div>
                         </div>
                     </div>
@@ -166,6 +171,7 @@
                                 <h5 class="card-title">Psychic Game</h5>
                                 <p class="card-text">Guess which letter your computer is thinking!</p>
                                 <a href="https://kd101jp14.github.io/Psychic-Game/" target="blank" class="btn btn-primary">Play!</a>
+                                <a href="https://github.com/kd101jp14/Psychic-Game" target="blank" class="btn btn-primary">View repository</a>
                             </div>
                         </div>
                     </div>
