Updated resume link.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </p>
 
                     <p>
-                        <a href="assets/images/Kyra_Davis_resume.pdf" target="blank">Click here to see my resume.</a>
+                        <a href="assets/images/Kyra_Davis_resume.pdf" target="blank" id="resume"><b>View resume here.</b></a>
                     </p>
                 </div>
             </div>
